gitops/amer-west/spaces/flux-dev/spring-music01/httproute.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  annotations:
    apps.tanzu.vmware.com/promotable: ""
    apps.tanzu.vmware.com/promote-group: ContainerApp/spring-music01
  name: spring-music01-http-route
spec:
  parentRefs:
  - group: networking.tanzu.vmware.com
    kind: Entrypoint
    name: main
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: spring-music01
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
